test for csv